--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "essed",
-  "version": "1.4.0",
-  "description": "Like Unix \"sed\" but for JS code",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "bin": {
-    "essed": "./bin/essed"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ginden/each-line.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Ginden/each-line/issues"
-  },
-  "homepage": "https://github.com/Ginden/each-line#readme",
-  "dependencies": {
-    "bluebird": "^3.5.0",
-    "byline": "^5.0.0",
-    "colors": "^1.1.2",
-    "commander": "^2.11.0",
-    "highland": "^2.11.0",
-    "lodash": "^4.17.4"
-  }
+    "name": "essed",
+    "version": "1.4.1",
+    "description": "Like Unix \"sed\" but for JS code",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "bin": {
+        "essed": "./bin/essed"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Ginden/each-line.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Ginden/each-line/issues"
+    },
+    "homepage": "https://github.com/Ginden/each-line#readme",
+    "dependencies": {
+        "bluebird": "^3.5.0",
+        "byline": "^5.0.0",
+        "colors": "^1.1.2",
+        "commander": "^2.11.0",
+        "highland": "^2.11.0",
+        "lodash": "^4.17.4"
+    },
+    "files": [
+        "index.js",
+        "bin",
+        "lib"
+    ]
 }
